--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,43 @@
-name: Fetch Software Data
+name: Run PHP Script
 
 on:
   schedule:
-    - cron: '0 0 * * *' # 每天午夜运行
-  workflow_dispatch: # 手动触发
+    - cron: '0 0 * * *'  # 每天午夜运行
+  workflow_dispatch:  # 也可以手动触发
 
 jobs:
-  build:
+  run-php:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.1'
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'  # 根据需要选择 PHP 版本
 
-    - name: Install dependencies
-      run: composer install
+      - name: Install dependencies
+        run: composer install
+        working-directory: ./  # 根据你的项目结构调整路径
 
-    - name: Fetch and save data
-      run: php src/fetch_software.php b0w8ldo0j ruoshui 1
+      - name: Run PHP Script
+        run: php lanzouyunapi.php
+        working-directory: ./  # 根据你的项目结构调整路径
+        env:
+          REDIRECT: false  # 设置环境变量，根据需要调整
+          TYPES: json      # 设置返回类型为 JSON
+        id: run_script
 
-    - name: Commit and push data
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add data/software_data.json
-        git commit -m "Update software data" || echo "No changes to commit"
-        git push
+      - name: Save output to file
+        run: echo "${{ steps.run_script.outputs.stdout }}" > output.json
+        working-directory: ./  # 输出文件保存路径
+
+      - name: Commit and push output file
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add output.json
+          git commit -m "Update output file" || echo "No changes to commit"
+          git push origin HEAD
