--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Run PHP Script
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天午夜运行
+    - cron: ' 0 0 */3 * *'  # 每三天午夜运行
   workflow_dispatch:  # 也可以手动触发
 
 jobs:
